--- a/src/app/finish/finish.component.html
+++ b/src/app/finish/finish.component.html
@@ -1,5 +1,5 @@
 <div class="container my-container-css ">
   <div class="row justify-content-center align-items-center response-submitted-div">
-    <h2>Your Response has been submitted</h2>
+    <h2>Your Response has been submitted!</h2>
   </div>
 </div>
